destination section styled

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                 <div class="img">
                     <img src="Images/logo.png" alt="">
                 </div>
-                <div class="logo"><h1>Take A Trip</h1></div>
+                <div class="name"><h1>Take A <span>Trip</span></h1></div>
             </div>
             <div class="links">
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li><a href="">Packages</a></li>
+                    <li><a class="clr" href="">Packages</a></li>
                     <li><a href="">Testimonial</a></li>
                     <li><a href="">Blog</a></li>
                     <li><a href="">Contact</a></li>
@@ -32,6 +32,96 @@
         </section>
     </header>
     <main>
+        <!-- banner section starts-->
+        <section class="banner">
+            <div class="banner_container">
+                <div class="banner_contents">
+                    <h1>Explore Your Travel</h1>
+                    <p>Travel the world and explore the unexpected what you have never imagined of. Come with us and <span class="clr">Fill The Thrill</span>. Never stop dreaming.</p>
+                    <div class="inputs">
+                        <input type="text" placeholder="Where to GO">
+                        <select name="" id="">
+                            <option value="">When</option>
+                            <option value="">Today</option>
+                            <option value="">Tomorrow</option>
+                            <option value="">Days After</option>
+                        </select>
+                        <select name="" id="">
+                            <option value="">Select Type</option>
+                            <option value="">Single</option>
+                            <option value="">Couple</option>
+                            <option value="">Family</option>
+                            <option value="">Vacation</option>
+                        </select>
+                        <button class="btn-primary"><i class="fa-solid fa-magnifying-glass fa-sm" style="color: #ffffff;"></i> &nbsp;Find Now</button>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- banner section ends-->
+
+        <!-- popular tours section starts -->
+        <section class="popular">
+            <div class="contets">
+                <h1>Our Popular Tours</h1>
+                <p>We have traveled around the world so much that, you can have a tour with us almost everywhere. We are consiouse about...</p>
+                <ul>
+                    <li>
+                        <p>Your Health and your financialily. No problem with your healt & finance. We will be happy to have you with us.</p>
+                    </li>
+                    <li>
+                        <p>Your care. We are very consious about your caring. You won't be feeling lonely while we are with you.</p>
+                    </li>
+                    <li>
+                        <p>
+                            Friendly. We are very friendly and family type mens are here.
+                        </p>
+                    </li>
+                </ul>
+                <p>Never stop yourself from traveling the world. Your must <span class="clr">Fill The Thrill.</span></p>
+                <button class="btn-primary">Read More</button>
+            </div>
+            <div class="mountain">
+                <img src="Images/mountain.png" alt="">
+            </div>
+        </section>
+
+        <!-- popular tours section ends -->
+
+        <!-- choose your destination section starts here -->
+        <section class="destination">
+            <h1>Choose Your Destination</h1>
+            <p>Here are some awesome sightes where you can groome around freely and feel the nature. Choose Your Destination where ever you want what ever you want. Everything is possible.</p>
+            <div class="first_row">
+                <div class="maldives">
+                    <img src="Images/maldives.png" alt="">
+                </div>
+                <div class="indonesia">
+                    <img src="Images/indonesia.png" alt="">
+                </div>
+            </div>
+            <div class="second_row">
+                <div class="srilanka">
+                    <img src="Images/srilanka.png" alt="">
+                </div>
+                <div class="north_america">
+                    <img src="Images/north_ameria.png" alt="">
+                </div>
+                <div class="kashmir">
+                    <img src="Images/kashmir.png" alt="">
+                </div>
+            </div>
+            <div class="third_row">
+                <div class="bangladesh">
+                    <img src="Images/bangladesh.png" alt="">
+                </div>
+                <div class="bandarban">
+                    <img src="Images/bandarban.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- choose your destination section ends here -->
 
     </main>
     <footer>
