why choose us section added

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <!-- choose your destination section starts here -->
         <section class="destination">
-            <h1>Choose Your Destination</h1>
+            <h1 class="main_title">Choose Your Destination</h1>
             <p>Here are some awesome sightes where you can groome around freely and feel the nature. Choose Your Destination where ever you want what ever you want. Everything is possible.</p>
             <div class="first_row">
                 <div class="maldives">
@@ -123,6 +123,20 @@
         </section>
         <!-- choose your destination section ends here -->
 
+        <!-- why choose us section starts here -->
+        <section class="why_us">
+            <h1 class="main_title">Why Choose Us</h1>
+            <p>We are the best among all and we ensure you that we can provide the best security for anyone any where.</p>
+            <div class="services">
+                <div class="hotels">
+                    <img src="" alt="">
+                    <h1>HandPicked Hotels</h1>
+                    <p>We select the best of the best hotels for living and spending time. It is one of the best and the most place when one in out from home. So, we can feel you more like pleasure.</p>
+                </div>
+                <div class="service"></div>
+            </div>
+        </section>
+        <!-- why choose us section ends here -->
     </main>
     <footer>
 
