Why choose us section done

--- a/index.html
+++ b/index.html
@@ -129,11 +129,20 @@
             <p>We are the best among all and we ensure you that we can provide the best security for anyone any where.</p>
             <div class="services">
                 <div class="hotels">
-                    <img src="" alt="">
-                    <h1>HandPicked Hotels</h1>
+                    <img src="Images/icons/Hotel.jpg" alt="">
+                    <h1 class="service_title">HandPicked Hotels</h1>
                     <p>We select the best of the best hotels for living and spending time. It is one of the best and the most place when one in out from home. So, we can feel you more like pleasure.</p>
                 </div>
-                <div class="service"></div>
+                <div class="service">
+                    <img src="Images/icons/service.jpg" alt="">
+                    <h1 class="service_title">World Class Service</h1>
+                    <p>We gathering the best of the best of all. We try to catch people's heart with servicing. We believe that, a good service can make people's feel amazing while they are out.</p>
+                </div>
+            </div>
+            <div class="price_gurantee">
+                
+                <h1 class="service_title">Best Price Gurantee</h1>
+                <p>We are the best and affordable. We do not charge anything extra from you. We take the necessary amount that will be need for us staying and chilling there.</p>
             </div>
         </section>
         <!-- why choose us section ends here -->
