adding deals & discount section

--- a/index.html
+++ b/index.html
@@ -140,12 +140,31 @@
                 </div>
             </div>
             <div class="price_gurantee">
-                
+                <img src="Images/icons/gurantee.jpg" alt="">
                 <h1 class="service_title">Best Price Gurantee</h1>
                 <p>We are the best and affordable. We do not charge anything extra from you. We take the necessary amount that will be need for us staying and chilling there.</p>
             </div>
         </section>
         <!-- why choose us section ends here -->
+
+        <!-- deals and discount section starts here -->
+        <section class="deals_discoun">
+            <div class="d_head">
+                <h1 class="main_title">Deals & Discount</h1>
+                <p>We have some lovely discounts, get the discount and have <span class="clr">Fill The Thrill</span> </p>
+            </div>
+            <div class="back_1">
+                <div class="card_1"></div>
+            </div>
+            <div class="back_2">
+                <div class="card_2"></div>
+            </div>
+            <div class="back_3">
+                <div class="card_3"></div>
+            </div>
+        </section>
+
+        <!-- deals and discount section ends here -->
     </main>
     <footer>
 
