working on dealt and discount's top bar card

--- a/index.html
+++ b/index.html
@@ -151,16 +151,52 @@
         <section class="deals_discoun">
             <div class="d_head">
                 <h1 class="main_title">Deals & Discount</h1>
-                <p>We have some lovely discounts, get the discount and have <span class="clr">Fill The Thrill</span> </p>
+                <p>We have some lovely discounts, get the discount and <span class="clr">Fill The Thrill</span> </p>
             </div>
             <div class="back_1">
-                <div class="card_1"></div>
+                <div class="card_1">
+                    <div class="top_bar">
+                        <div class="time">
+                            <i class="fa-regular fa-clock fa-lg" style="color: #ff7b00;"></i> 7 Days/6 Nights
+                        </div>
+                        <div class="people">
+                            <i class="fa-solid fa-user-group fa-lg" style="color: #ff7b00;"></i> Max : 10
+                        </div>
+                        <div class="location">
+                            <i class="fa-solid fa-location-dot fa-lg" style="color: #ff7b00;"></i> Malaysia
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="back_2">
-                <div class="card_2"></div>
+                <div class="card_2">
+                    <div class="top_bar">
+                        <div class="time">
+                            <i class="fa-regular fa-clock fa-lg" style="color: #ff7b00;"></i> 7 Days/6 Nights
+                        </div>
+                        <div class="people">
+                            <i class="fa-solid fa-user-group fa-lg" style="color: #ff7b00;"></i> Max : 10
+                        </div>
+                        <div class="location">
+                            <i class="fa-solid fa-location-dot fa-lg" style="color: #ff7b00;"></i> Malaysia
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="back_3">
-                <div class="card_3"></div>
+                <div class="card_3">
+                    <div class="top_bar">
+                        <div class="time">
+                            <i class="fa-regular fa-clock fa-lg" style="color: #ff7b00;"></i> 7 Days/6 Nights
+                        </div>
+                        <div class="people">
+                            <i class="fa-solid fa-user-group fa-lg" style="color: #ff7b00;"></i> Max : 10
+                        </div>
+                        <div class="location">
+                            <i class="fa-solid fa-location-dot fa-lg" style="color: #ff7b00;"></i> Malaysia
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
