--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <!-- why choose us section starts here -->
         <section class="why_us">
             <h1 class="main_title">Why Choose Us</h1>
-            <p>We are the best among all and we ensure you that we can provide the best security for anyone any where.</p>
+            <p id="why_text">We are the best among all and we ensure you that we can provide the best security for anyone any where.</p>
             <div class="services">
                 <div class="hotels">
                     <img src="Images/icons/Hotel.jpg" alt="">
@@ -165,7 +165,9 @@
                         <div class="location">
                             <i class="fa-solid fa-location-dot fa-lg" style="color: #ff7b00;"></i> Malaysia
                         </div>
-                    </div>
+                    </div> 
+                    <h1>Tour To Satorini</h1>
+                    <p>This is a place where you can enjoy your vacation time pretty silently and play with your childrens.</p>
                 </div>
             </div>
             <div class="back_2">
@@ -201,6 +203,24 @@
         </section>
 
         <!-- deals and discount section ends here -->
+
+        <!-- a simple perfect place to get lost section starts here -->
+
+        <section class="perfect_place">
+            <div class="perfect_contex">
+                <h1>A Simple Perfect Place<br>To Get Lost</h1>
+                <p>The amazing view holder, The most demanding one, The best of all hill view, The Bandarban.</p>
+                <ul>
+                    <li>Join Us, we are going to visit the best of all hill sight, The Bandarban. Visit our office soon.</li>
+                    <li>
+                        No need to be panicked. We will be like family. We are the best and we behave properly. Be with us and <span class="clr">Fill The Thrill</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="video"></div>
+        </section>
+
+        <!-- a simple perfect place to get lost section ends here -->
     </main>
     <footer>
 
