--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="Images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/responsive.css">
     <title>Take A Trip</title>
@@ -216,8 +217,11 @@
                         No need to be panicked. We will be like family. We are the best and we behave properly. Be with us and <span class="clr">Fill The Thrill</span>
                     </li>
                 </ul>
+                <button class="btn-primary">See More</button>
             </div>
-            <div class="video"></div>
+            <div class="video">
+                <img src="Images/Group 40089.png" alt="">
+            </div>
         </section>
 
         <!-- a simple perfect place to get lost section ends here -->
