newsletter section done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <section class="head">
             <div class="logo">
-                <div class="img">
+                <div class="img_logo">
                     <img src="Images/logo.png" alt="">
                 </div>
                 <div class="name"><h1>Take A <span>Trip</span></h1></div>
@@ -225,6 +225,28 @@
         </section>
 
         <!-- a simple perfect place to get lost section ends here -->
+
+
+        <!-- newsletter section starts here -->
+        <section class="newsletterr">
+            <div class="newsletter_contex">
+                <h1>Newsletter</h1>
+                <p>Get your daily dose of travel news & tips.<br> Sign Up today!</p>
+                <hr>
+                <input type="text" placeholder="Enter Your Name">
+                <input type="email" placeholder="Enter Your Emial">
+                <button class="btn-primary subscribe">Subscribe</button>
+            </div>
+            <div class="img">
+                <div class="save">
+                    <h2>Travel.com</h2>
+                    <h1>Save up to 70%</h1>
+                </div>
+                <img src="Images/Rectangle 8 (1).png" alt="">                
+            </div>
+        </section>
+
+        <!-- newsletter section ends here -->
     </main>
     <footer>
 
