footer section done

--- a/index.html
+++ b/index.html
@@ -249,7 +249,24 @@
         <!-- newsletter section ends here -->
     </main>
     <footer>
+        <div class="logo foot">
+            <div class="img_logo">
+                <img src="Images/logo.png" alt="">
+            </div>
+            <div class="name"><h1>Take A <span>Trip</span></h1></div>
+        </div>
+        <p>We are helping people to travel around the world with success. <br> <span class="clr">Fill The Thrill</span></p>
 
+        <div class="linked_icons">
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-github"></i></a>
+        </div>
+        <hr>
+        <p class="rights">
+            2023, All Rights Reserved
+        </p>
     </footer>
 </body>
 </html>
