--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="Images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/responsive.css">
     <title>Take A Trip</title>
 </head>
+
 <body>
     <header>
         <section class="head">
@@ -16,7 +20,9 @@
                 <div class="img_logo">
                     <img src="Images/logo.png" alt="">
                 </div>
-                <div class="name"><h1>Take A <span>Trip</span></h1></div>
+                <div class="name">
+                    <h1>Take A <span>Trip</span></h1>
+                </div>
             </div>
             <div class="links">
                 <ul>
@@ -38,7 +44,8 @@
             <div class="banner_container">
                 <div class="banner_contents">
                     <h1>Explore Your Travel</h1>
-                    <p>Travel the world and explore the unexpected what you have never imagined of. Come with us and <span class="clr">Fill The Thrill</span>. Never stop dreaming.</p>
+                    <p>Travel the world and explore the unexpected what you have never imagined of. Come with us and
+                        <span class="clr">Fill The Thrill</span>. Never stop dreaming.</p>
                     <div class="inputs">
                         <input type="text" placeholder="Where to GO">
                         <select name="" id="">
@@ -54,7 +61,8 @@
                             <option value="">Family</option>
                             <option value="">Vacation</option>
                         </select>
-                        <button class="btn-primary"><i class="fa-solid fa-magnifying-glass fa-sm" style="color: #ffffff;"></i> &nbsp;Find Now</button>
+                        <button class="btn-primary"><i class="fa-solid fa-magnifying-glass fa-sm"
+                                style="color: #ffffff;"></i> &nbsp;Find Now</button>
 
                     </div>
                 </div>
@@ -66,13 +74,16 @@
         <section class="popular">
             <div class="contets">
                 <h1>Our Popular Tours</h1>
-                <p>We have traveled around the world so much that, you can have a tour with us almost everywhere. We are consiouse about...</p>
+                <p>We have traveled around the world so much that, you can have a tour with us almost everywhere. We are
+                    consiouse about...</p>
                 <ul>
                     <li>
-                        <p>Your Health and your financialily. No problem with your healt & finance. We will be happy to have you with us.</p>
+                        <p>Your Health and your financialily. No problem with your healt & finance. We will be happy to
+                            have you with us.</p>
                     </li>
                     <li>
-                        <p>Your care. We are very consious about your caring. You won't be feeling lonely while we are with you.</p>
+                        <p>Your care. We are very consious about your caring. You won't be feeling lonely while we are
+                            with you.</p>
                     </li>
                     <li>
                         <p>
@@ -93,7 +104,8 @@
         <!-- choose your destination section starts here -->
         <section class="destination">
             <h1 class="main_title">Choose Your Destination</h1>
-            <p>Here are some awesome sightes where you can groome around freely and feel the nature. Choose Your Destination where ever you want what ever you want. Everything is possible.</p>
+            <p>Here are some awesome sightes where you can groome around freely and feel the nature. Choose Your
+                Destination where ever you want what ever you want. Everything is possible.</p>
             <div class="first_row">
                 <div class="maldives">
                     <img src="Images/maldives.png" alt="">
@@ -127,23 +139,27 @@
         <!-- why choose us section starts here -->
         <section class="why_us">
             <h1 class="main_title">Why Choose Us</h1>
-            <p id="why_text">We are the best among all and we ensure you that we can provide the best security for anyone any where.</p>
+            <p id="why_text">We are the best among all and we ensure you that we can provide the best security for
+                anyone any where.</p>
             <div class="services">
                 <div class="hotels">
                     <img src="Images/icons/Hotel.jpg" alt="">
                     <h1 class="service_title">HandPicked Hotels</h1>
-                    <p>We select the best of the best hotels for living and spending time. It is one of the best and the most place when one in out from home. So, we can feel you more like pleasure.</p>
+                    <p>We select the best of the best hotels for living and spending time. It is one of the best and the
+                        most place when one in out from home. So, we can feel you more like pleasure.</p>
                 </div>
                 <div class="service">
                     <img src="Images/icons/service.jpg" alt="">
                     <h1 class="service_title">World Class Service</h1>
-                    <p>We gathering the best of the best of all. We try to catch people's heart with servicing. We believe that, a good service can make people's feel amazing while they are out.</p>
+                    <p>We gathering the best of the best of all. We try to catch people's heart with servicing. We
+                        believe that, a good service can make people's feel amazing while they are out.</p>
                 </div>
             </div>
             <div class="price_gurantee">
                 <img src="Images/icons/gurantee.jpg" alt="">
                 <h1 class="service_title">Best Price Gurantee</h1>
-                <p>We are the best and affordable. We do not charge anything extra from you. We take the necessary amount that will be need for us staying and chilling there.</p>
+                <p>We are the best and affordable. We do not charge anything extra from you. We take the necessary
+                    amount that will be need for us staying and chilling there.</p>
             </div>
         </section>
         <!-- why choose us section ends here -->
@@ -157,6 +173,7 @@
             <div class="back_1">
                 <div class="card_1">
                     <div class="top_bar">
+                        <div class="hedear">  
                         <div class="time">
                             <i class="fa-regular fa-clock fa-lg" style="color: #ff7b00;"></i> 7 Days/6 Nights
                         </div>
@@ -166,9 +183,13 @@
                         <div class="location">
                             <i class="fa-solid fa-location-dot fa-lg" style="color: #ff7b00;"></i> Malaysia
                         </div>
-                    </div> 
-                    <h1>Tour To Satorini</h1>
-                    <p>This is a place where you can enjoy your vacation time pretty silently and play with your childrens.</p>
+                        </div>
+                        <h1>Tour To Satorini</h1>
+                        <p>This is a place where you can enjoy your vacation time pretty silently and play with your childrens.</p>
+                        <h2>Price : $1111-$1999</h2>
+                        <button class="btn-primary">Book Now</button>
+                    </div>
+
                 </div>
             </div>
             <div class="back_2">
@@ -212,9 +233,11 @@
                 <h1>A Simple Perfect Place<br>To Get Lost</h1>
                 <p>The amazing view holder, The most demanding one, The best of all hill view, The Bandarban.</p>
                 <ul>
-                    <li>Join Us, we are going to visit the best of all hill sight, The Bandarban. Visit our office soon.</li>
+                    <li>Join Us, we are going to visit the best of all hill sight, The Bandarban. Visit our office soon.
+                    </li>
                     <li>
-                        No need to be panicked. We will be like family. We are the best and we behave properly. Be with us and <span class="clr">Fill The Thrill</span>
+                        No need to be panicked. We will be like family. We are the best and we behave properly. Be with
+                        us and <span class="clr">Fill The Thrill</span>
                     </li>
                 </ul>
                 <button class="btn-primary">See More</button>
@@ -242,7 +265,7 @@
                     <h2>Travel.com</h2>
                     <h1>Save up to 70%</h1>
                 </div>
-                <img src="Images/Rectangle 8 (1).png" alt="">                
+                <img src="Images/Rectangle 8 (1).png" alt="">
             </div>
         </section>
 
@@ -253,9 +276,12 @@
             <div class="img_logo">
                 <img src="Images/logo.png" alt="">
             </div>
-            <div class="name"><h1>Take A <span>Trip</span></h1></div>
+            <div class="name">
+                <h1>Take A <span>Trip</span></h1>
+            </div>
         </div>
-        <p>We are helping people to travel around the world with success. <br> <span class="clr">Fill The Thrill</span></p>
+        <p>We are helping people to travel around the world with success. <br> <span class="clr">Fill The Thrill</span>
+        </p>
 
         <div class="linked_icons">
             <a href=""><i class="fa-brands fa-twitter"></i></a>
@@ -269,4 +295,5 @@
         </p>
     </footer>
 </body>
+
 </html>
