--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
                         <h2>Price : $1111-$1999</h2>
                         <button class="btn-primary">Book Now</button>
                     </div>
-
                 </div>
             </div>
             <div class="back_2">
-                <div class="card_2">
+                <div class="card_1">
                     <div class="top_bar">
+                        <div class="hedear">  
                         <div class="time">
                             <i class="fa-regular fa-clock fa-lg" style="color: #ff7b00;"></i> 7 Days/6 Nights
                         </div>
@@ -204,12 +204,18 @@
                         <div class="location">
                             <i class="fa-solid fa-location-dot fa-lg" style="color: #ff7b00;"></i> Malaysia
                         </div>
+                        </div>
+                        <h1>Tour To Satorini</h1>
+                        <p>This is a place where you can enjoy your vacation time pretty silently and play with your childrens.</p>
+                        <h2>Price : $1111-$1999</h2>
+                        <button class="btn-primary">Book Now</button>
                     </div>
                 </div>
             </div>
             <div class="back_3">
-                <div class="card_3">
+                <div class="card_1">
                     <div class="top_bar">
+                        <div class="hedear">  
                         <div class="time">
                             <i class="fa-regular fa-clock fa-lg" style="color: #ff7b00;"></i> 7 Days/6 Nights
                         </div>
@@ -219,6 +225,11 @@
                         <div class="location">
                             <i class="fa-solid fa-location-dot fa-lg" style="color: #ff7b00;"></i> Malaysia
                         </div>
+                        </div>
+                        <h1>Tour To Satorini</h1>
+                        <p>This is a place where you can enjoy your vacation time pretty silently and play with your childrens.</p>
+                        <h2>Price : $1111-$1999</h2>
+                        <button class="btn-primary">Book Now</button>
                     </div>
                 </div>
             </div>
