desktop site done with my own section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="banner_contents">
                     <h1>Explore Your Travel</h1>
                     <p>Travel the world and explore the unexpected what you have never imagined of. Come with us and
-                        <span class="clr">Fill The Thrill</span>. Never stop dreaming.</p>
+                        <span class="clr">Feel The Thrill</span>. Never stop dreaming.</p>
                     <div class="inputs">
                         <input type="text" placeholder="Where to GO">
                         <select name="" id="">
@@ -91,7 +91,7 @@
                         </p>
                     </li>
                 </ul>
-                <p>Never stop yourself from traveling the world. Your must <span class="clr">Fill The Thrill.</span></p>
+                <p>Never stop yourself from traveling the world. Your must <span class="clr">Feel The Thrill.</span></p>
                 <button class="btn-primary">Read More</button>
             </div>
             <div class="mountain">
@@ -168,7 +168,7 @@
         <section class="deals_discoun">
             <div class="d_head">
                 <h1 class="main_title">Deals & Discount</h1>
-                <p>We have some lovely discounts, get the discount and <span class="clr">Fill The Thrill</span> </p>
+                <p>We have some lovely discounts, get the discount and <span class="clr">Feel The Thrill</span> </p>
             </div>
             <div class="back_1">
                 <div class="card_1">
@@ -248,7 +248,7 @@
                     </li>
                     <li>
                         No need to be panicked. We will be like family. We are the best and we behave properly. Be with
-                        us and <span class="clr">Fill The Thrill</span>
+                        us and <span class="clr">Feel The Thrill</span>
                     </li>
                 </ul>
                 <button class="btn-primary">See More</button>
@@ -260,6 +260,67 @@
 
         <!-- a simple perfect place to get lost section ends here -->
 
+
+        <!-- my own made section starts here -->
+        <section class="team">
+            <h1 id="team">Meet The Head</h1>
+            <div class="member_images">
+                <div class="badge">
+                    <div class="image">
+                        <img src="Images/team/john.jpg" alt="">
+                    </div>
+                    <div class="name">
+                        <h3 title="Name: Khalid">Khalid</h3>
+                    </div>
+                    <div class="designation">
+                        <h4>The Advisor</h4>
+                    </div>
+                    <div class="joining_date">2009-Now</div>
+                </div>
+                <div class="badge">
+                    <div class="image">
+                        <img src="Images/team/mark.avif" alt="">
+                    </div>
+                    <div class="name">
+                        <h3>Mark Tuna</h3>
+                    </div>
+                    <div class="designation">
+                        <h4>Manager</h4>
+                    </div>
+                    <div class="joining_date">2012-Now</div>
+                </div>
+                <div class="badge">
+                    <div class="image">
+                        <img src="Images/team/shraddha.webp" alt="">
+                    </div>
+                    <div class="name">
+                        <h3>Shraddha Khapar</h3>
+                    </div>
+                    <div class="designation">
+                        <h4>Product Manager</h4>
+                    </div>
+                    <div class="joining_date">2018-Now</div>
+                </div>
+                <div class="badge">
+                    <div class="image">
+                        <img src="Images/team/tim.jpg" alt="">
+                    </div>
+                    <div class="name">
+                        <h3>John Mark</h3>
+                    </div>
+                    <div class="designation">
+                        <h4>The Founder</h4>
+                    </div>
+                </div>
+            </div>            
+            <div class="hurray">
+                <div class="pack">Pack Your bags! <br> It is time to <span class="clr">Feel The Thrill.</span></div>
+                <img src="Images/pack your bags.jpg" alt="">
+            </div>
+        </section>
+
+
+        <!-- my own made section ends here -->
 
         <!-- newsletter section starts here -->
         <section class="newsletterr">
@@ -291,7 +352,7 @@
                 <h1>Take A <span>Trip</span></h1>
             </div>
         </div>
-        <p>We are helping people to travel around the world with success. <br> <span class="clr">Fill The Thrill</span>
+        <p>We are helping people to travel around the world with success. <br> <span class="clr">Feel The Thrill</span>
         </p>
 
         <div class="linked_icons">
