names in the center added learned from youtube

--- a/index.html
+++ b/index.html
@@ -107,30 +107,43 @@
             <p>Here are some awesome sightes where you can groome around freely and feel the nature. Choose Your
                 Destination where ever you want what ever you want. Everything is possible.</p>
             <div class="first_row">
-                <div class="maldives">
+                <div class="fine_tune">
                     <img src="Images/maldives.png" alt="">
+                    <div class="mal_center">
+                        Maldives
+                    </div>
                 </div>
-                <div class="indonesia">
+                <div class="fine_tune">
                     <img src="Images/indonesia.png" alt="">
+                    <div class="mal_center">Indonesia</div>
                 </div>
             </div>
             <div class="second_row">
-                <div class="srilanka">
+                <div class="fine_tune">
                     <img src="Images/srilanka.png" alt="">
+                    <div class="mal_center">Srilanka</div>
                 </div>
-                <div class="north_america">
+                <div class="fine_tune">
                     <img src="Images/north_ameria.png" alt="">
+                    <div class="mal_center">North America</div>
                 </div>
-                <div class="kashmir">
+                <div class="fine_tune">
                     <img src="Images/kashmir.png" alt="">
+                    <div class="mal_center">
+                        Kashmir
+                    </div>
                 </div>
             </div>
             <div class="third_row">
-                <div class="bangladesh">
+                <div class="fine_tune">
                     <img src="Images/bangladesh.png" alt="">
+                    <div class="mal_center">Bangladesh</div>
                 </div>
-                <div class="bandarban">
+                <div class="fine_tune">
                     <img src="Images/bandarban.png" alt="">
+                    <div class="mal_center">
+                        Bandarban
+                    </div>
                 </div>
             </div>
         </section>
