--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 <button class="btn-primary">See More</button>
             </div>
             <div class="video">
-                <img src="Images/Group 40089.png" alt="">
+                <iframe width="100%" height="450" src="https://www.youtube.com/embed/Cn4G2lZ_g2I?si=_ZXIAQ43FWJIh7Q4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
 
