--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             </div>
             <div class="img">
                 <div class="save">
-                    <h2>Travel.com</h2>
+                    <h2>Take A Tour.com</h2>
                     <h1>Save up to 70%</h1>
                 </div>
                 <img src="Images/Rectangle 8 (1).png" alt="">
