tablet responsive features added

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <img src="Images/srilanka.png" alt="">
                     <div class="mal_center">Srilanka</div>
                 </div>
-                <div class="fine_tune">
+                <div class="fine_tune north">
                     <img src="Images/north_ameria.png" alt="">
                     <div class="mal_center">North America</div>
                 </div>
@@ -245,6 +245,9 @@
                         <button class="btn-primary">Book Now</button>
                     </div>
                 </div>
+            </div>
+            <div class="all_pack_btn">
+                <button class="btn-primary">See All Packages</button>
             </div>
         </section>
 
