hr section added

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             </div>
         </section>
         <!-- banner section ends-->
+        <hr class="tablet_hr">
 
         <!-- popular tours section starts -->
         <section class="popular">
@@ -100,7 +101,7 @@
         </section>
 
         <!-- popular tours section ends -->
-
+        <hr class="tablet_hr">
         <!-- choose your destination section starts here -->
         <section class="destination">
             <h1 class="main_title">Choose Your Destination</h1>
