new featuers on tablet mode added

--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
             </div>
         </section>
         <!-- choose your destination section ends here -->
-
+        <hr class="tablet_hr">
+        
         <!-- why choose us section starts here -->
         <section class="why_us">
             <h1 class="main_title">Why Choose Us</h1>
@@ -177,6 +178,7 @@
             </div>
         </section>
         <!-- why choose us section ends here -->
+        <hr class="tablet_hr">
 
         <!-- deals and discount section starts here -->
         <section class="deals_discoun">
@@ -253,6 +255,7 @@
         </section>
 
         <!-- deals and discount section ends here -->
+        <hr class="tablet_hr">
 
         <!-- a simple perfect place to get lost section starts here -->
 
@@ -276,6 +279,7 @@
         </section>
 
         <!-- a simple perfect place to get lost section ends here -->
+        <hr class="tablet_hr">
 
 
         <!-- my own made section starts here -->
@@ -335,9 +339,8 @@
                 <img src="Images/pack your bags.jpg" alt="">
             </div>
         </section>
-
-
         <!-- my own made section ends here -->
+        <hr class="tablet_hr">
 
         <!-- newsletter section starts here -->
         <section class="newsletterr">
